--- a/projects/templates/projects/list_projects.html
+++ b/projects/templates/projects/list_projects.html
@@ -10,6 +10,9 @@
     <main>
         <div>
             <h1>My Projects</h1>
+            <p>
+                <a href="{% url "create_project" %}">Create a new task</a>
+            </p>
             {% if not projects %}
                 <p>You are not assigned to any projects</p>
             {% else %}
