--- a/projects/templates/projects/list_projects.html
+++ b/projects/templates/projects/list_projects.html
@@ -1,23 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects</title>
-</head>
-<body>
-    <main>
-        <div>
-            <h1>My Projects</h1>
-            <p>
-                <a href="{% url "create_project" %}">Create a new task</a>
-            </p>
-            {% if not projects %}
-                <p>You are not assigned to any projects</p>
-            {% else %}
-                <table>
-                    <thead>
+{% extends "base.html" %}
+
+{% block main %}
+    <div>
+        <h1>My Projects</h1>
+        <p>
+            <a href="{% url "create_project" %}">Create a new task</a>
+        </p>
+        {% if not projects %}
+            <p>You are not assigned to any projects</p>
+        {% else %}
+            <table>
+                <thead>
                     <tr>
                         <th>Name</th>
                         <th>Number of tasks</th>
@@ -25,19 +18,15 @@
                 </thead>
                 <tbody>
                     {% for project in projects %}
-                    <tr>
-                        <td>
-                            <a href="{% url "show_project" project.id %}">{{ project.name }}</a>
-                        </td>
-                        <td>
-                            {{ project.tasks.all|length }}
-                        </td>
-                    </tr>
+                        <tr>
+                            <td>
+                                <a href="{% url "show_project" project.id %}">{{ project.name }}</a>
+                            </td>
+                            <td>{{ project.tasks.all|length }}</td>
+                        </tr>
                     {% endfor %}
                 </tbody>
             </table>
-            {% endif %}
-        </div>
-    </main>
-</body>
-</html>
+        {% endif %}
+    </div>
+{% endblock main %}
