--- a/projects/templates/projects/show_project.html
+++ b/projects/templates/projects/show_project.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-</head>
-<body>
-    <main>
-        <div>
-            <h1>{{ project.name }}</h1>
-            <p>{{ project.description }}</p>
-            <h2>Tasks</h2>
-            <p>
-                <a href="{% url "create_task" %}">Create a new task</a>
-            </p>
-            {% if project.tasks.all|length %}
+{% extends "base.html" %}
+
+{% block main %}
+    <div>
+        <h1>{{ project.name }}</h1>
+        <p>{{ project.description }}</p>
+        <h2>Tasks</h2>
+        <p>
+            <a href="{% url "create_task" %}">Create a new task</a>
+        </p>
+        {% if project.tasks.all|length %}
             <table>
                 <thead>
                     <tr>
@@ -28,7 +21,7 @@
                 </thead>
                 <tbody>
                     {% for task in project.tasks.all %}
-                    <tr>
+                        <tr>
                             <td>{{ task.name }}</td>
                             <td>{{ task.assignee.username }}</td>
                             <td>{{ task.start_date }}</td>
@@ -36,12 +29,10 @@
                             <td>{{ task.is_completed|yesno }}</td>
                         </tr>
                     {% endfor %}
-                    </tbody>
-                </table>
-            {% else %}
-                <p>This project has no tasks</p>
-            {% endif %}
-        </div>
-    </main>
-</body>
-</html>
+                </tbody>
+            </table>
+        {% else %}
+            <p>This project has no tasks</p>
+        {% endif %}
+    </div>
+{% endblock main %}
