--- a/tasks/templates/tasks/show_my_tasks.html
+++ b/tasks/templates/tasks/show_my_tasks.html
@@ -1,40 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>show my tasks</title>
-</head>
-<body>
-    <main>
-        <div>
-            <h1>My Tasks</h1>
-            {% if my_tasks.all|length %}
-                <table>
-                    <thead>
+{% extends "base.html" %}
+
+{% block main %}
+    <div>
+        <h1>My Tasks</h1>
+        {% if my_tasks.all|length %}
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Start date</th>
+                        <th>Due date</th>
+                        <th>Is completed</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for task in my_tasks.all %}
                         <tr>
-                            <th>Name</th>
-                            <th>Start date</th>
-                            <th>Due date</th>
-                            <th>Is completed</th>
+                            <td>{{ task.name }}</td>
+                            <td>{{ task.start_date }}</td>
+                            <td>{{ task.due_date }}</td>
+                            <td>{{ task.is_completed|yesno }}</td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        {% for task in my_tasks.all %}
-                            <tr>
-                                <td>{{ task.name }}</td>
-                                <td>{{ task.start_date }}</td>
-                                <td>{{ task.due_date }}</td>
-                                <td>{{ task.is_completed|yesno }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            {% else %}
-                <p>You have no tasks</p>
-            {% endif %}
-        </div>
-    </main>
-</body>
-</html>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>You have no tasks</p>
+        {% endif %}
+    </div>
+{% endblock main %}
